apps/to-speckit/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: to-speckit
  namespace: nori-cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: to-speckit
  template:
    metadata:
      labels:
        app: to-speckit
    spec:
      containers:
        - image: ghcr.io/nori-cloud/to-specify:563bd2e
          name: to-speckit
          ports:
            - containerPort: 3000
