apps/to-speckit/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: to-speckit
  namespace: nori-cloud
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: to-speckit
